[gd_scene load_steps=7 format=3 uid="uid://cevmq8gdvt3ws"]

[ext_resource type="Script" path="res://Bots/2/Bot2.gd" id="1_7vcnu"]
[ext_resource type="Texture2D" uid="uid://c3in8yngjadc6" path="res://Turbo/TurboBar.png" id="2_hmkpg"]
[ext_resource type="Script" path="res://Turbo/TurboBar.gd" id="3_2nsi2"]
[ext_resource type="Texture2D" uid="uid://cfqk03wt54q6t" path="res://Bots/2/Bot_2.png" id="4_q7d34"]
[ext_resource type="Script" path="res://Bots/2/CalculatorBot2.gd" id="5_7imdi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p5t6u"]
radius = 24.6882

[node name="Bot2" type="RigidBody2D" groups=["Bots", "Players"]]
z_index = 1
mass = 2.0
gravity_scale = 0.0
linear_damp = 3.0
script = ExtResource("1_7vcnu")
isOfensive = true
walkSpeed = 60000
turboSpeed = 120000
hyperTurboSpeed = 240000.0
turboRemaining = 0.5
turboVector = [Vector2(955, 74), Vector2(955, 574)]
MDTT = 700
mDTT = 400
MDTHT = 400
DTBBS = 152.813
goalCenterVector = Vector2(962, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p5t6u")

[node name="TurboBar" type="TextureProgressBar" parent="."]
offset_left = -26.2777
offset_top = -26.231
offset_right = 373.722
offset_bottom = 373.769
scale = Vector2(0.13, 0.13)
max_value = 500.0
value = 500.0
fill_mode = 4
texture_progress = ExtResource("2_hmkpg")
script = ExtResource("3_2nsi2")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_q7d34")

[node name="Bot2RayCast" type="RayCast2D" parent="."]

[node name="Bot2RayCastPTS" type="RayCast2D" parent="."]
modulate = Color(1, 0, 0, 1)

[node name="Calculator" type="Node2D" parent="." node_paths=PackedStringArray("bot")]
script = ExtResource("5_7imdi")
bot = NodePath("..")
walkSpeed = 60000
turboSpeed = 120000
hyperTurboSpeed = 240000.0
turboVector = [Vector2(955, 74), Vector2(955, 574)]
